# prattle

./: .gitignore  Cargo.toml  README.ja.md  README.md  cspell.json  justfile
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: client_connection.rs  lib.rs  main.rs  pinned_cert_verifier.rs
server/: Cargo.toml
server/src/: client.rs  main.rs  shutdown_signal.rs  tls.rs
server/tests/: commands.rs  connection_flow.rs  messages.rs  shutdown.rs
server/tests/common/: mod.rs  test_client.rs  test_server.rs  test_tls.rs
src/: client.rs  client_conn.rs  command.rs  lib.rs  logger.rs  main.rs  server.rs  tls.rs
tests/: commands.rs  connection_flow.rs  integration_tests.rs  messages.rs  shutdown.rs
tests/common/: insecure_test_tls.rs  mod.rs  test_client.rs  test_server.rs  test_tls.rs
