[workspace]
members = ["server", "client", "cli"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "forbid"
expect_used = "forbid"

[workspace.dependencies]
anyhow = "1.0.100"
pem = "3.0.6"
rustls = "0.23.35"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
