[package]
name = "prattle-server"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
pem = "3.0.6"
rcgen = "0.14.6"
rustls = "0.23.35"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
